# rag-forge

./: .gitignore  LICENSE  pyproject.toml
data/sample/: doc_1.txt  doc_2.txt  doc_3.txt  qa.csv
rag_forge/: __init__.py  chunk.py  retrieve.py
