[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-forge"
version = "0.1.0"
description = "Opinionated RAG pipeline benchmarking. Find the best chunking, embedding, and retrieval config for your documents."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Kethan Goparapu", email = "ketgop2@gmail.com"},
]
keywords = ["rag", "retrieval", "benchmark", "embeddings", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "chromadb>=0.4.22",
    "sentence-transformers>=2.2.2",
    "rank-bm25>=0.2.2",
    "ragas>=0.1.7",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-openai>=0.0.5",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "matplotlib>=3.8.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]
openai = [
    "openai>=1.0.0",
]

[project.scripts]
rag-forge = "rag_forge.cli:app"

[tool.setuptools.packages.find]
include = ["rag_forge*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
